--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-PySide6>=6.9
-opencv-python-headless>=4.12.0.88
-pydantic>=2.7
-tomlkit>=0.12
-cachetools>=5.3
-pytest>=8.0
-PyYAML>=6.0.1
+PySide6==6.9.2
+PyYAML==6.0.2
+opencv-python==4.9.0.80
+Pillow>=10.0.0
+imagehash==4.3.1
+tqdm==4.66.4
